--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a routerLink="listagem" class="nav-link" routerLinkActive="active">Lista de Clientes</a>
+      <a routerLink="listagem" class="nav-link" routerLinkActive="active">Lista de Usuário</a>
     </li>
     <li class="nav-item">
-      <a routerLink="novo" class="nav-link" routerLinkActive="active">Novo</a>
+      <a routerLink="novo" class="nav-link" routerLinkActive="active">Novo Usuário</a>
     </li>
   </ul>
 </nav>
@@ -19,5 +18,3 @@
     </div>
   </div>
 </div>
-
-<router-outlet></router-outlet>
